--- a/APSReactTutorial.csproj
+++ b/APSReactTutorial.csproj
@@ -144,6 +144,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="dist\webpack\home\index.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -151,13 +152,12 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="package.json" />
+    <Content Include="src\jsx\Home\Home.jsx" />
+    <Content Include="src\jsx\Home\index.js" />
     <Content Include="webpack.config.js" />
     <Content Include=".babelrc" />
     <Content Include=".gitignore" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\dist\Home\react\bundle.js" />
-    <Content Include="Scripts\Home\react\Home.jsx" />
-    <Content Include="Scripts\Home\react\index.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
