--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "asp.net",
   "private": true,
   "scripts": {
-    "watch": "npm install && webpack --mode development --watch",
+    "watch": "npm install && webpack --watch",
     "build": "webpack"
   },
   "devDependencies": {
@@ -15,6 +15,8 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "prop-types": "^15.7.2",
+    "scheduler": "^0.19.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-notifier": "^1.8.0"
