--- a/APSReactTutorial/package.json
+++ b/APSReactTutorial/package.json
@@ -18,10 +18,15 @@
     "browser-sync-webpack-plugin": "^2.2.2",
     "jquery": "^1.9.1",
     "prop-types": "^15.7.2",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.13.1",
     "scheduler": "^0.19.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-notifier": "^1.8.0"
+  },
+  "dependencies": {
+    "deep-equal": "^2.0.3"
   }
 }
