--- a/APSReactTutorial/ASPReactTutorial.csproj
+++ b/APSReactTutorial/ASPReactTutorial.csproj
@@ -155,6 +155,9 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\componentStyles\inputGroup.css" />
+    <Content Include="Content\componentStyles\panel.css" />
+    <Content Include="Content\componentStyles\table.css" />
     <Content Include="dist\webpack\home\index.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -164,6 +167,10 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="package.json" />
     <Content Include="src\api\CalendarsRepository.js" />
+    <Content Include="src\common\form.jsx" />
+    <Content Include="src\common\input.jsx" />
+    <Content Include="src\common\inputGroup.jsx" />
+    <Content Include="src\common\viewTable.jsx" />
     <Content Include="src\jsx\Home\Home.jsx" />
     <Content Include="src\jsx\Home\index.js" />
     <Content Include="src\jsx\Playground\index.js" />
